--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-dotenv": "^2.5.5",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.3"
+    "@babel/core": "^7.9.0"
   },
   "private": true
 }
